# minecraft-planner

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  architecture.md  bot-protocol.md  bot.js  commands.md  config.json  extract_materials.js  extract_materials.py  extracted_materials.json  get_mc_data.js  main.py  phase4a_optimized_global.json  planner.md  planner.py  planner2.md  pyproject.toml  test_bot.py
.claude/: settings.json
.gemini/: settings.json
constants/: block_hardness.json  blueprints.json  material_harvest.json  ore_data.json  tools.json
debug_utitlities/: blueprint_linter.py  generate_timeline.py  queue_batch_01.mmd  queue_batch_02.mmd  queue_batch_03.mmd  queue_batch_04.mmd  queue_batch_05.mmd  queue_batch_06.mmd  queue_batch_07.mmd  queue_batch_08.mmd  queue_batch_09.mmd  queue_batch_10.mmd  queue_batch_11.mmd  queue_flowchart.mmd  queue_timeline.html  queue_visualizer.py  result.txt  tool_optimization.mmd
mojang_datapack/: recipes.py  worldgen.py
planner/: combiner.py  dag_router.py  final_checker.py  global_math_optimizer.py  global_optimizer.py  item_task_generator.py  local_optimizer.py
scripts/: generate_blueprints_phase1.py  vendor_mcmeta_data_json.py
supervisor/: handshake.py  test.py
supervisor/MCCTP-main/python/: pyproject.toml  remote_play.py  test_client.py
supervisor/MCCTP-main/python/src/mcctp/: __init__.py  actions.py  client.py  exceptions.py  state.py  sync_client.py
tests/: house_materials.json  input_materials_test.json  input_materials_test.phase1_queue.json  input_materials_test.phase2.json  queue_simulator.py  (+11 more)
(+102 files in other folders)
